2006-04-12  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fix bugtracker issue 3172: MIME type determination crashing (HEAD request)

2006-04-07  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0

2006-04-06  Michael Stucki  <michael@typo3.org>

	* !!! Fixed bug #3151: $TYPO3_CONF_VARS[im_jpg_quality] was changed to $TYPO3_CONF_VARS[jpg_quality] some time ago except in one place. Three questions marks since this was changed some time ago but not mentioned in here.
	* !!! Remove hardcoded linebreak after radio elements. Notice that this will affect your template when in "accessibility" mode with $TYPO3_CONF_VARS[SYS][compat_version] lower than 4.0.
	* Fixed bug #2485: Duplicate fieldset definition for radio elements. Thanks to Ernesto Baschny for providing a fix for this.
	* Minor changes to Indexed Search, see local ChangeLog for details
	* Prevented path traversal (../) in t3lib_tstemplate::getFileName(). This is was never really a security issue, because it affected only paths set in TypoScript which only full TYPO3 admins have access to anyway. Thanks to Ingmar for providing a fix.

2006-04-06   Rupert Germann  <rupi@gmx.li>

	* Fixed bug #3134: install tool / all text centered in IE and Opera
	* Fixed bug #3154: Misspelling in instal tool

2006-04-06  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* rtehtmlarea: fix bugtracker issue 3120: transforming text in link in Firefox may take excessive time.
	* rtehtmlarea: fix bugtracker issue 3060: RTE includes a page from the Frontent after paste a text

2006-04-05  Peter Niederlag  <peter@niederlag.de>

	* Fixed Bug #313 Problem with LOAD/RESTORE_REGISTER in lib.stdheader, thx to click/Ernesto for solution

2006-04-04  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0rc3
	* Fixed bug #3065: wrap2.splitChar and wrap3.splitChar are ignored
	* Fix RDCT links: Did not point to index.php by default