@@ -4,7 +4,7 @@
     <td valign="top"><img src="clear.gif" width="400" height="1" alt="" /><br />###CONTENT_NORMAL###</td>
     <td valign="top" width="9"><table width="8" border="0">
         <tr valign="top">
-          <td width="1"><img height="100%" src="media/uploads/newsletter/blue.gif" width="1" alt="" /></td></tr></table></td>
+          <td width="1"><img height="100%" src="typo3/sysext/cms/tslib/media/uploads/newsletter/blue.gif" width="1" alt="" /></td></tr></table></td>
     <td valign="top" width="193">###CONTENT_MARGIN###</td>
     </tr></table>
 	
