@@ -1,3 +1,8 @@
+2006-04-12  Ingmar Schlecht <ingmar@typo3.org>
+
+	* Fixed bug #3065: chr() was misspelled char() in t3lib_div
+	* Fixed bug #3233: Some broken references to media/ fixed
+
 2006-04-12  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Fix bugtracker issue 3172: MIME type determination crashing (HEAD request)
